prometheus-stack/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: monitor-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: prometheus
            port:
              number: 9090
        path: /prometheus
        pathType: Prefix
  - http:
      paths:
      - backend:
          service:
            name: grafana-service
            port:
              number: 3000
        path: /grafana(/|$)(.*)
        pathType: Prefix
